# timeclout

./: .gitignore  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  codegen.ts  esbuild-config.cjs  eslint.config.js  lingui.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  schema.graphql  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.setup.ts
.cursor/rules/: business-rules.mdc  e2e-tests.mdc  i18n.mdc  ui.mdc
.github/: CODEOWNERS  mergify.yml
.github/workflows/: README-version-bump.md  README.md  auto-merge.yml  cleanup-closed-prs.yml  deploy-pr.yml  deploy-prod.yml  e2e-tests.yml  pr-undeploy.yml  test.yml  version-bump.yml  workflow-security.yml
apps/backend/: app.arc  package.json
apps/frontend/: index.html  (+2 more)
docs/: ORGANIZATION_SUMMARY.md  README.md  TABLE_OF_CONTENTS.md
e2e/: README.md  debug-page.spec.ts  debug-selectors.spec.ts  example-navigation.spec.ts  login-with-helpers.spec.ts  login.spec.ts  simple-test.spec.ts
libs/vector-search/: Cargo.toml  README.md
libs/vector-search/.cargo/: config.toml
libs/vector-search/src/: lib.rs  search.rs
patches/: @architect__functions.patch  @architect__sandbox.patch  @auth__core.patch  @auth__express.patch  @xenova__transformers.patch
scripts/: cleanup-closed-prs.sh  download-embedding-model.ts  extract-help-content.ts  extractBackendMessages.cjs  generate-embeddings.ts  protect-production-tables.sh  register-discord-commands.ts  test-version-bump.js  undeploy-pr.sh  updateEnv.js  updateEnv.ts  watchSourceRefreshLambda.cjs  watchSourceRefreshLambda.js
(+1057 files in other folders)
